Fixed sidepanel looking fucky on mobile view

--- a/src/app/components/Sidepanel/Sidepanel.scss
+++ b/src/app/components/Sidepanel/Sidepanel.scss
@@ -807,9 +807,13 @@ body[miniplayer] .sidepanel {
         display: flex;
         flex-direction: row;
         height: initial !important;
+        width: 100% !important;
         justify-content: space-around;
         flex-shrink: 0;
         padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        border-right: none !important;
 
         border-top: solid var(--accent-color) 1px !important;
         
